--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -27,9 +27,9 @@ import {pgwWrap} from "../js/pgw.js";
           <a href="#" id="logout-link" class="active-link">登出</a>
         </li>
         <li id="logout-divider" class="divider" style="display: none;">｜</li>
-        <li><a href="#book-header">票選列表</a></li>
+        <li><a href="/#book-header">票選列表</a></li>
         <li class="divider">｜</li>
-        <li><a href="#" id="rulesLink">活動辦法</a></li>
+        <li><a href="/rules" >活動辦法</a></li> <!--id="rulesLink"-->
         <li class="divider">｜</li>
         <li>
           <a
